<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:paddingLeft="10dp">

    <TableLayout
        android:id="@+id/tlStandings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#caccc9">

            <TextView
                android:id="@+id/tvLeagueName"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/leagueName"
                android:textColor="#FFF"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:text="@string/played"
                android:textAlignment="center"
                android:textColor="#FFF"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvWon"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:text="@string/won"
                android:textAlignment="center"
                android:textColor="#FFF"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvLose"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:text="@string/lose"
                android:textAlignment="center"
                android:textColor="#FFF"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvDraw"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:text="@string/draw"
                android:textAlignment="center"
                android:textColor="#FFF"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvPoints"
                android:layout_width="43dp"
                android:layout_height="wrap_content"
                android:text="@string/points"
                android:textAlignment="center"
                android:textColor="#FFF"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

        <TextView
            android:id="@+id/tvTeamName1"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="F.C. Heur-Tongeren"
            android:textColor="#FFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvPlayed1"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:text="17"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvWon1"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:text="10"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvLose1"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:text="5"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvDraw1"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:text="2"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvPoints1"
            android:layout_width="43dp"
            android:layout_height="wrap_content"
            android:text="32"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>
</FrameLayout>