<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/tvPersonalInformation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personalInformation"
            android:textColor="#0EBFE9"
            android:textSize="22sp" />

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rlFirstname"
            android:layout_below="@id/tvPersonalInformation">

            <TextView
                android:id="@+id/tvFirstname"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/firstname"
                android:textColor="#FFF"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etFirstname"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:inputType="textPersonName" />

        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rlLastname"
            android:layout_below="@id/rlFirstname">

            <TextView
                android:id="@+id/tvLastname"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/lastname"
                android:textColor="#FFF"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etLastname"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:inputType="textPersonName" />

        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rlEmail"
            android:layout_below="@id/rlLastname">

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="#FFF"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:inputType="textEmailAddress" />

        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rlPhone"
            android:layout_below="@id/rlEmail">

            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textColor="#FFF"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:ems="10" />

        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rlStreet"
            android:layout_below="@id/rlPhone">

            <TextView
                android:id="@+id/tvStreet"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/street"
                android:textColor="#FFF"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etStreet"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:inputType="textPostalAddress" />

        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rlPostalCode"
            android:layout_below="@id/rlStreet">

            <TextView
                android:id="@+id/tvPostalCode"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/postalCode"
                android:textColor="#FFF"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etPostalCode"
                android:layout_width="75dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:inputType="textPostalAddress" />

        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rlCity"
            android:layout_below="@id/rlPostalCode">

            <TextView
                android:id="@+id/tvCity"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:textColor="#FFF"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etCity"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:inputType="textPostalAddress" />

        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rlCountry"
            android:layout_below="@id/rlCity">

            <TextView
                android:id="@+id/tvCountry"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:textColor="#FFF"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etCountry"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:inputType="textPostalAddress" />

        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.CardView
            android:id="@+id/cvSave"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_below="@+id/rlCountry"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            app:cardBackgroundColor="@android:color/darker_gray"
            app:cardCornerRadius="25dp"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:id="@+id/tvSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:onClick="saveUser"
                    android:text="@string/save"
                    android:textColor="#FFF"
                    android:textSize="25sp" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/tvChangePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/changePassword"
            android:textColor="#0EBFE9"
            android:textSize="22sp"
            android:layout_below="@id/cvSave"/>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rlCurrentPassword"
            android:layout_below="@id/tvChangePassword">

            <TextView
                android:id="@+id/tvCurrentPassword"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/currentPassword"
                android:textColor="#FFF"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etCurrentPassword"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:inputType="textPassword" />

        </android.support.v7.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/tvErrorPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/rlCurrentPassword"
            android:text="@string/errorPassword"
            android:textColor="#FF0000"
            android:visibility="gone"
            android:textSize="16sp" />

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rlNewPassword"
            android:layout_below="@id/tvErrorPassword">

            <TextView
                android:id="@+id/tvNewPassword"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/currentPassword"
                android:textColor="#FFF"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etNewPassword"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:inputType="textPassword" />

        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.CardView
            android:id="@+id/cvChangePassword"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_below="@+id/rlNewPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            app:cardBackgroundColor="@android:color/darker_gray"
            app:cardCornerRadius="25dp"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:id="@+id/tvChange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:onClick="editPassword"
                    android:text="@string/edit"
                    android:textColor="#FFF"
                    android:textSize="25sp" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </RelativeLayout>

</ScrollView>