<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvFirstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/firstname"
            android:textColor="#FFF"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etFirstname"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_below="@+id/tvFirstname"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tvLastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etFirstname"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/lastname"
            android:textColor="#FFF"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etLastname"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_below="@+id/tvLastname"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etLastname"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/email"
            android:textColor="#FFF"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_below="@+id/tvEmail"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/tvRegisterUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etEmail"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/username"
            android:textColor="#FFF"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etRegisterUsername"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_below="@+id/tvRegisterUsername"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tvRegisterPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etRegisterUsername"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/password"
            android:textColor="#FFF"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etRegisterPassword"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_below="@+id/tvRegisterPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:inputType="textPassword" />

        <android.support.v7.widget.CardView
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_below="@+id/etRegisterPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            app:cardBackgroundColor="@android:color/darker_gray"
            app:cardCornerRadius="25dp"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:id="@+id/tvLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:onClick="register"
                    android:text="@string/register"
                    android:textColor="#FFF"
                    android:textSize="25sp" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </RelativeLayout>
</ScrollView>