<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.soccerapp.MainActivity">

        <ImageView
            android:id="@+id/ivFootball"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            app:srcCompat="@drawable/football" />

        <TextView
            android:id="@+id/tvFacebookFriends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivFootball"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textColor="#0EBFE9"
            android:textSize="20sp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvFacebookFriends"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/username"
            android:textColor="#FFF"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_below="@+id/tvUsername"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvUsername"
            android:layout_alignStart="@+id/tvUsername"
            android:layout_below="@+id/etUsername"
            android:layout_marginTop="15dp"
            android:text="@string/password"
            android:textColor="#FFF"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_alignLeft="@+id/etUsername"
            android:layout_alignStart="@+id/etUsername"
            android:layout_below="@+id/tvPassword"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/tvErrorLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/etPassword"
            android:text="@string/errorLogin"
            android:textColor="#FF0000"
            android:visibility="gone"
            android:textSize="16sp" />

        <android.support.v7.widget.CardView
            android:id="@+id/cvLogin"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_below="@+id/tvErrorLogin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="20dp"
            app:cardBackgroundColor="@android:color/darker_gray"
            app:cardCornerRadius="25dp"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="#FFF"
                    android:textSize="25sp"
                    android:layout_centerInParent="true"
                    android:onClick="login"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/loginFacebook"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cvLogin"/>

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginFacebook"
            android:layout_centerHorizontal="true"
            android:text="@string/registerHere"
            android:textColor="#FFF"
            android:textSize="16sp"
            android:onClick="clickRegister"
            android:paddingBottom="20dp"
            android:layout_marginTop="10dp"/>

    </RelativeLayout>
</ScrollView>